api-gpva/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpva-api-deployment
  namespace: xconnected
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gpva-api
  template:
    metadata:
      labels:
        app: gpva-api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: gpva-api
        image: xconnected/components:gpva-api-3.0
        imagePullPolicy: Always
        args:
        - uvicorn 
        - main:app
        - --host
        - "0.0.0.0"
        - --port
        - "8002"
