api-gpva/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gpva-api-service
  namespace: xconnected
spec:
  ports:
    - port: 8002
  selector:
    app: gpva-api
