api-gpva/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gpva-ingress
  namespace: xconnected
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - http:
      paths:
      - path: /api-gpva
        pathType: Prefix
        backend:
          service:
            name: gpva-api-service
            port:
              number: 8002
